# T6Training

./: .gitignore  Cargo.toml  README.md  index.html  manifest.json  sw.js  t6_training.js
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
src/: app.rs  boldface.rs  graphics.rs  lib.rs  main.rs
