[package]
name = "t6_training"
version = "0.1.2"
authors = ["Shawn Stickle"]
license = "GNU GPLv3"
edition = "2021"

[dependencies]
eframe = "0.30.0"
egui = "0.30.0"
egui_extras = { version = "0.30.0",  features = ["default", "all_loaders"] }
image = { version = "*",  features = ["jpeg", "png"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)